--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "To Do List App",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node bin/www",
+    "dev": "nodemon -q bin/www"
   },
   "author": "Safira",
   "license": "ISC",
