--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.25.3",
-    "sequelize-cli": "^6.5.2"
+    "sequelize-cli": "^6.5.2",
+    "swagger-ui-express": "^4.5.0"
   }
 }
