--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -23,3 +23,4 @@ jobs:
           HD_DB_PASSWORD: ${{secrets.DB_PASSWORD}}
           HD_DB_NAME: ${{secrets.DB_NAME}}
           HD_DB_HOST: ${{secrets.DB_HOST}}
+          HD_DB_PORT: ${{secrets.DB_PORT}}
