build: update engines in package json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "To Do List App",
   "main": "index.js",
+  "engines" : { 
+    "npm" : ">=16.0.0",
+    "node" : ">=8.0.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node bin/www",
