build: update engines in package json

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "To Do List App",
   "main": "index.js",
   "engines" : { 
-    "npm" : ">=16.0.0",
-    "node" : ">=8.0.0"
+    "node" : ">=16.0.0",
+    "npm" : ">=8.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
